--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,8 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%"
+  out.width = "100%",
+  eval = TRUE
 )
 library(dplyr)
 ```
@@ -18,6 +19,8 @@ library(dplyr)
 
 <!-- badges: start -->
 <!-- badges: end -->
+
+## Intro
 
 Run multiple LLM predictions against a table. The predictions run row-wise
 over a specified column. It works using a pre-determined one-shot prompt, along
@@ -31,18 +34,21 @@ type of analysis needed. Currently, the included prompts perform the following:
 
 This package is inspired by the SQL AI functions now offered by vendors such as
 [Databricks](https://docs.databricks.com/en/large-language-models/ai-functions.html) 
-and Snowflake. For local data, `mall` uses Ollama to call an LLM. 
+and Snowflake. For local data, `mall` uses [Ollama](https://ollama.com/) to call an LLM. 
 
-If you pass a table connected to **Databricks** via ODBC, `mall` will automatically
+### Databricks integration
+
+If you pass a table connected to **Databricks** via `odbc`, `mall` will automatically
 use Databricks' LLM instead of Ollama. It will call the corresponding SQL AI 
 function. 
 
 ## Motivation
 
-We want to help data scientists use LLMs in a new way. Typically, LLMs have been
-used to ask coding questions (chat) or for code completion (Copilot). This 
-interface provides an easy way to analyze text data, and without
-having to spend time writing an NLP model. 
+We want to new find ways to help data scientists use LLMs in their daily work. 
+Unlike the familiar interfaces, such as chatting and code completion, this interface
+runs your text data directly against the LLM.  The LLM's flexibility, allows for
+it to adapt to the subject of your data, and provide surprisingly accurate predictions. 
+This saves the data scientist the need to write and tune an NLP model. 
 
 ## Examples
 
@@ -81,10 +87,10 @@ ctl_new_pillar.tbl_long <- function(controller, x, width, ...) {
 }
 ```
 
-The main functions in `mall` are verb-like functions that expect a `tbl` as 
-their first argument. This allows us to use them in piped operations. 
-
 ### Sentiment
+
+Primarily,  `mall` provides verb-like functions that expect a `tbl` as 
+their first argument. This allows us to use them in piped operations. 
 
 For the first example, we'll asses the sentiment of each review. In order to 
 do this we will call `llm_sentiment()`:
@@ -112,17 +118,33 @@ reviews |>
   filter(.sentiment == "negative")
 ```
 
+## Summarize
+
+There may be a need to reduce the number of words in a given text. Usually, to 
+make it easier to capture its intent. To do this, use `llm_summarize()`. This
+function has an argument to control the maximum number of words to output 
+(`max_words`):
 
 ```{r}
 reviews |> 
   llm_summarize(review, max_words = 5) 
 ```
 
+To control the name of the prediction field, you can change `pred_name` argument.
+This works with the other `llm_` functions as well. 
+
 ```{r}
 reviews |> 
   llm_summarize(review, max_words = 5, pred_name = "review_summary") 
 ```
 
+## Extract 
+
+One of the most interesting operations. Using natural language, we can tell the 
+LLM to return a specific part of the text. In the following example, we request
+that the LLM return the product being referred to. We do this by simply saying 
+"product". The LLM understands what we *mean* by that word, and looks for that
+in the text.
 
 
 ```{r}
