--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,8 @@ library(dplyr)
 library(dbplyr)
 library(tictoc)
 library(DBI)
+
+mall::llm_init()
 ```
 
 # `mall`
@@ -60,12 +62,12 @@ We will start with a very small table with product reviews:
 ```{r}
 library(dplyr)
 
-reviews  <- tribble(
-  ~ review,
-    "This has been the best TV I've ever used. Great screen, and sound.", 
-    "I regret buying this laptop. It is too slow and the keyboard is too noisy", 
-    "Not sure how to feel about my new washing machine. Great color, but hard to figure"
-  )
+reviews <- tribble(
+  ~review,
+  "This has been the best TV I've ever used. Great screen, and sound.",
+  "I regret buying this laptop. It is too slow and the keyboard is too noisy",
+  "Not sure how to feel about my new washing machine. Great color, but hard to figure"
+)
 ```
 
 ```{r, include=FALSE}
@@ -79,12 +81,12 @@ reviews <- new_tibble(reviews, class = "tbl_long")
 
 ctl_new_pillar.tbl_long <- function(controller, x, width, ...) {
   out <- NextMethod()
-  if(attr(out$data, "width") > 50) {
+  if (attr(out$data, "width") > 50) {
     attr(out$data, "width") <- 40
   }
   new_pillar(list(
     title = out$title,
-    type = out$type, 
+    type = out$type,
     data = out$data
   ))
 }
@@ -117,7 +119,7 @@ can be used in further transformations:
 
 ```{r}
 reviews |>
-  llm_sentiment(review, options = c("positive", "negative")) |> 
+  llm_sentiment(review, options = c("positive", "negative")) |>
   filter(.sentiment == "negative")
 ```
 
@@ -129,16 +131,25 @@ function has an argument to control the maximum number of words to output
 (`max_words`):
 
 ```{r}
-reviews |> 
-  llm_summarize(review, max_words = 5) 
+reviews |>
+  llm_summarize(review, max_words = 5)
 ```
 
 To control the name of the prediction field, you can change `pred_name` argument.
 This works with the other `llm_` functions as well. 
 
 ```{r}
-reviews |> 
-  llm_summarize(review, max_words = 5, pred_name = "review_summary") 
+reviews |>
+  llm_summarize(review, max_words = 5, pred_name = "review_summary")
+```
+
+## Classify
+
+Use the LLM to categorize the text into one of the options you provide: 
+
+```{r}
+reviews |>
+  llm_classify(review, c("appliance", "computer"))
 ```
 
 ## Extract 
@@ -154,6 +165,24 @@ in the text.
 reviews |>
   llm_extract(review, "product")
 ```
+
+## Custom prompt
+
+It is possible to pass your own prompt to the LLM, and have `mall` run it 
+against each text entry. Use `llm_custom()` to access this functionality: 
+
+```{r}
+my_prompt <- paste(
+  "Answer a question.",
+  "Return only the answer, no explanation",
+  "Acceptable answers are 'yes', 'no'",
+  "Answer this about the following text, is this a happy customer?:"
+)
+
+reviews |> 
+  llm_custom(review, my_prompt)
+```
+
 
 ## Key considerations
 
@@ -191,8 +220,8 @@ library(classmap)
 
 data(data_bookReviews)
 
-book_reviews <- data_bookReviews |> 
-  head(100) |> 
+book_reviews <- data_bookReviews |>
+  head(100) |>
   as_tibble()
 
 glimpse(book_reviews)
@@ -211,12 +240,12 @@ simple word count. So we're analyzing a bit over 20 thousand words.
 library(tictoc)
 
 tic()
-reviews_llm <- book_reviews |> 
+reviews_llm <- book_reviews |>
   llm_sentiment(
     x = review,
-    options = c("positive", "negative"), 
+    options = c("positive", "negative"),
     pred_name = "predicted"
-    )
+  )
 toc()
 ```
 
@@ -246,8 +275,8 @@ will not be of the "truth", but rather the package's results recorded in
 ```{r}
 library(forcats)
 
-reviews_llm |> 
-  mutate(fct_pred = as.factor(ifelse(predicted == "positive", 2, 1))) |> 
+reviews_llm |>
+  mutate(fct_pred = as.factor(ifelse(predicted == "positive", 2, 1))) |>
   yardstick::accuracy(sentiment, fct_pred)
 ```
 
@@ -270,7 +299,7 @@ As mentioned above, using `llm_sentiment()` in Databricks will call that vendor'
 SQL AI function directly:
 
 ```{r}
-tbl_reviews |> 
+tbl_reviews |>
   llm_sentiment(review)
 ```
 
@@ -282,7 +311,7 @@ Next, we will try `llm_summarize()`. The `max_words` argument maps to the same
 argument in the AI Summarize function:
 
 ```{r}
-tbl_reviews |> 
+tbl_reviews |>
   llm_summarize(review, max_words = 5)
 ```
 
