--- a/README.Rmd
+++ b/README.Rmd
@@ -166,6 +166,19 @@ reviews |>
   llm_extract(review, "product")
 ```
 
+## Translate
+
+As the title implies, this function will translate the text into a specified 
+language. What is really nice, it is that you don't need to specify the language
+of the source text. Only the target language needs to be defined.  The translation
+accuracy will depend on the LLM
+
+```{r}
+reviews |> 
+  llm_translate(review, "spanish")
+```
+
+
 ## Custom prompt
 
 It is possible to pass your own prompt to the LLM, and have `mall` run it 
@@ -183,6 +196,23 @@ reviews |>
   llm_custom(review, my_prompt)
 ```
 
+## Init
+
+Invoking an `llm_` function will automatically initialize a model selection
+if you don't have one selected yet. If there is only one option, it will 
+pre-select it for you. If there are more than one available models, then `mall`
+will present you as menu selection so you can select which model you wish to 
+use.
+
+Calling `llm_init()` directly will let you specify the model and backend to use.
+You can also setup additional arguments that will be passed down to the 
+function that actually runs the prediction. In the case of Ollama, that function
+is [`generate()`](https://hauselin.github.io/ollama-r/reference/generate.html). 
+
+```{r}
+llm_init("ollama", "llama3.1", seed = 100, temperature = 0.2)
+```
+
 
 ## Key considerations
 
@@ -191,7 +221,7 @@ The main consideration is **cost**. Either, time cost, or money cost.
 If using this method with an LLM locally available, the cost will be a long 
 running time. Unless using a very specialized LLM, a given LLM is a general model. 
 It was fitted using a vast amount of data. So determining a response for each 
-row, takes longerthat if using a manually created NLP model. The default model
+row, takes longer than if using a manually created NLP model. The default model
 used in Ollama is Llama 3.1, which was fitted using 8B parameters. 
 
 If using an external LLM service, the consideration will need to be for the 
@@ -249,10 +279,11 @@ reviews_llm <- book_reviews |>
 toc()
 ```
 
-As far as **time**, on my Apple M3 machine, it took about 3 to 4 minutes to process,
-100 rows, containing 20 thousand words. 
+As far as **time**, on my Apple M3 machine, it took about 3 to process,
+100 rows, containing 20 thousand words. Setting `temp` to 0.2 in `llm_init()`, 
+made the model run a bit faster.
 
-The package uses `purr` to send each prompt individually to the LLM. But, I did
+The package uses `purrr` to send each prompt individually to the LLM. But, I did
 try a few different ways to speed up the process, unsuccessfully:
 
 - Used `furrr` to send multiple requests at a time. This did not work because 
@@ -279,6 +310,23 @@ reviews_llm |>
   mutate(fct_pred = as.factor(ifelse(predicted == "positive", 2, 1))) |>
   yardstick::accuracy(sentiment, fct_pred)
 ```
+
+## Vector functions
+
+`mall` includes functions that expect a vector, instead of a table, to run the
+predictions. This should make it easier to test things, such as custom prompts
+or results of specific text. Each `llm_` function has a corresponding `llm_vec_`
+function:
+
+```{r}
+llm_vec_sentiment("I am happy")
+```
+
+```{r}
+llm_vec_translate("Este es el mejor dia!", "english")
+```
+
+
 
 ## Databricks
 
