Renames mall_init to llm_use, and documents

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ library(dbplyr)
 library(tictoc)
 library(DBI)
 
-mall::mall_init("ollama", "llama3.1", seed = 100)
+mall::llm_use("ollama", "llama3.1", seed = 100)
 ```
 
 # `mall`
@@ -229,13 +229,13 @@ pre-select it for you. If there are more than one available models, then `mall`
 will present you as menu selection so you can select which model you wish to 
 use.
 
-Calling `mall_init()` directly will let you specify the model and backend to use.
+Calling `llm_use()` directly will let you specify the model and backend to use.
 You can also setup additional arguments that will be passed down to the 
 function that actually runs the prediction. In the case of Ollama, that function
 is [`generate()`](https://hauselin.github.io/ollama-r/reference/generate.html). 
 
 ```{r}
-mall_init("ollama", "llama3.1", seed = 100, temperature = 0.2)
+llm_use("ollama", "llama3.1", seed = 100, temperature = 0.2)
 ```
 
 ## Key considerations
@@ -304,7 +304,7 @@ toc()
 ```
 
 As far as **time**, on my Apple M3 machine, it took about 3 minutes to process,
-100 rows, containing 20 thousand words. Setting `temp` to 0.2 in `mall_init()`, 
+100 rows, containing 20 thousand words. Setting `temp` to 0.2 in `llm_use()`, 
 made the model run a bit faster.
 
 The package uses `purrr` to send each prompt individually to the LLM. But, I did
