--- a/utils/qmd-reference/reference.qmd
+++ b/utils/qmd-reference/reference.qmd
@@ -2,7 +2,7 @@
 title: "{{{{notitle.title}}}}"
 ---
 
-*{{{{notitle.source}}}}*
+[{{{{notitle.source}}}}](https://github.com/edgararuiz/mall/blob/main/{{{{notitle.source}}}})
 
 ## {{{{notitle.alias}}}}
 
