--- a/reference/llm_classify.qmd
+++ b/reference/llm_classify.qmd
@@ -2,7 +2,7 @@
 title: "Categorize data as one of options given"
 ---
 
-*R/llm-classify.R*
+[R/llm-classify.R](https://github.com/edgararuiz/mall/blob/main/R/llm-classify.R)
 
 ## llm_classify
 
