--- a/reference/llm_sentiment.qmd
+++ b/reference/llm_sentiment.qmd
@@ -2,7 +2,7 @@
 title: "Sentiment analysis"
 ---
 
-*R/llm-sentiment.R*
+[R/llm-sentiment.R](https://github.com/edgararuiz/mall/blob/main/R/llm-sentiment.R)
 
 ## llm_sentiment
 
