Updates and re-renders README

--- a/README.Rmd
+++ b/README.Rmd
@@ -9,8 +9,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%",
-  eval = TRUE
+  out.width = "100%"
 )
 library(dplyr)
 library(dbplyr)
@@ -27,29 +26,6 @@ mall::llm_use("ollama", "llama3.1", seed = 100, .cache = "_readme_cache")
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![Codecov test coverage](https://codecov.io/gh/edgararuiz/mall/branch/main/graph/badge.svg)](https://app.codecov.io/gh/edgararuiz/mall?branch=main)
 <!-- badges: end -->
-
-```{r, eval = FALSE, echo = FALSE}
-source("utils/table_of_contents.R")
-table_of_contents()
-```
-
-
-<!-- toc: start -->
-- [Motivation](#motivation)
-- [LLM functions](#llm-functions)
-    - [Sentiment](#sentiment)
-    - [Summarize](#summarize)
-    - [Classify](#classify)
-    - [Extract ](#extract)
-    - [Translate](#translate)
-    - [Custom prompt](#custom-prompt)
-- [Initialize session](#initialize-session)
-- [Key considerations](#key-considerations)
-- [Performance](#performance)
-- [Vector functions](#vector-functions)
-- [Databricks](#databricks)
-
-<!-- toc: end -->
 
 ## Intro
 
@@ -346,39 +322,4 @@ llm_vec_sentiment("I am happy")
 
 ```{r}
 llm_vec_translate("Este es el mejor dia!", "english")
-```
-
-## Databricks
-
-This brief example shows how seamless it is to use the same `llm_` functions,
-but against a remote connection:
-
-```{r}
-library(DBI)
-
-con <- dbConnect(
-  odbc::databricks(),
-  HTTPPath = Sys.getenv("DATABRICKS_PATH")
-)
-
-tbl_reviews <- copy_to(con, reviews)
-```
-As mentioned above, using `llm_sentiment()` in Databricks will call that vendor's
-SQL AI function directly:
-
-```{r}
-tbl_reviews |>
-  llm_sentiment(review)
-```
-
-There are some differences in the arguments, and output of the LLM's. Notice
-that instead of "neutral", the prediction is "mixed".  The AI Sentiment function
-does not allow to change the possible options.
-
-Next, we will try `llm_summarize()`. The `max_words` argument maps to the same
-argument in the AI Summarize function:
-
-```{r}
-tbl_reviews |>
-  llm_summarize(review, max_words = 5)
 ```
