Enables examples run, updates template to freeze results, adds example to sentiment, updates freeze

--- a/reference/llm_classify.qmd
+++ b/reference/llm_classify.qmd
@@ -1,5 +1,8 @@
 ---
 title: "Categorize data as one of options given"
+execute:
+  eval: true
+  freeze: true
 ---
 
 [R/llm-classify.R](https://github.com/edgararuiz/mall/blob/main/R/llm-classify.R)
