--- a/utils/qmd-reference/reference.qmd
+++ b/utils/qmd-reference/reference.qmd
@@ -1,5 +1,8 @@
 ---
 title: "{{{{notitle.title}}}}"
+execute:
+  eval: true
+  freeze: true
 ---
 
 [{{{{notitle.source}}}}](https://github.com/edgararuiz/mall/blob/main/{{{{notitle.source}}}})
