--- a/reference/llm_sentiment.qmd
+++ b/reference/llm_sentiment.qmd
@@ -1,5 +1,8 @@
 ---
 title: "Sentiment analysis"
+execute:
+  eval: true
+  freeze: true
 ---
 
 [R/llm-sentiment.R](https://github.com/edgararuiz/mall/blob/main/R/llm-sentiment.R)
@@ -46,5 +49,21 @@ llm_vec_sentiment(
  `llm_sentiment` returns a `data.frame` or `tbl` object. `llm_vec_sentiment` returns a vector that is the same length as `x`. 
 
 
+## Examples
+```{r}
+ 
+library(mall) 
+ 
+llm_use("ollama", "llama3.1", seed = 100, .silent = TRUE) 
+ 
+llm_vec_sentiment("I am happy") 
+ 
+# Specify values to return per sentiment 
+llm_vec_sentiment("I am happy", c("positive" ~ 1, "negative" ~ 0)) 
+ 
+llm_vec_sentiment("I am sad", c("positive" ~ 1, "negative" ~ 0)) 
+ 
+ 
+```
 
 
