--- a/reference/llm_summarize.qmd
+++ b/reference/llm_summarize.qmd
@@ -1,5 +1,8 @@
 ---
 title: "Summarize text"
+execute:
+  eval: true
+  freeze: true
 ---
 
 [R/llm-summarize.R](https://github.com/edgararuiz/mall/blob/main/R/llm-summarize.R)
