--- a/reference/llm_use.qmd
+++ b/reference/llm_use.qmd
@@ -1,5 +1,8 @@
 ---
 title: "Specify the model to use"
+execute:
+  eval: true
+  freeze: true
 ---
 
 [R/llm-use.R](https://github.com/edgararuiz/mall/blob/main/R/llm-use.R)
