Finally figured out how to control the knitr table output! And re-rendered qmds

--- a/articles/databricks.qmd
+++ b/articles/databricks.qmd
@@ -5,6 +5,10 @@ execute:
   freeze: true
 ---
 
+```{r}
+#| include: false
+source("../utils/knitr-print.R")
+```
 
 ```{r, include = FALSE}
 packageStartupMessage(library(dplyr))
