--- a/reference/llm_custom.qmd
+++ b/reference/llm_custom.qmd
@@ -5,6 +5,11 @@ execute:
   freeze: true
 ---
 
+```{r}
+#| include: false
+source("../utils/knitr-print.R")
+```
+
 [R/llm-custom.R](https://github.com/edgararuiz/mall/blob/main/R/llm-custom.R)
 
 ## llm_custom
