--- a/reference/llm_sentiment.qmd
+++ b/reference/llm_sentiment.qmd
@@ -5,6 +5,11 @@ execute:
   freeze: true
 ---
 
+```{r}
+#| include: false
+source("../utils/knitr-print.R")
+```
+
 [R/llm-sentiment.R](https://github.com/edgararuiz/mall/blob/main/R/llm-sentiment.R)
 
 ## llm_sentiment
