--- a/README.Rmd
+++ b/README.Rmd
@@ -23,10 +23,12 @@ mall::llm_use("ollama", "llama3.1", seed = 100, .cache = "_readme_cache")
 
 # mall
 
+<img src="man/figures/favicon/apple-touch-icon-180x180.png" style="float:right" />
+
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/edgararuiz/mall/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/edgararuiz/mall/actions/workflows/R-CMD-check.yaml)
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![Codecov test coverage](https://codecov.io/gh/edgararuiz/mall/branch/main/graph/badge.svg)](https://app.codecov.io/gh/edgararuiz/mall?branch=main)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
 ## Intro
