Adds examples to extract, minor fixes to summarize

--- a/reference/llm_summarize.qmd
+++ b/reference/llm_summarize.qmd
@@ -66,7 +66,7 @@ reviews <- data.frame(review = c(
 llm_summarize(reviews, review, max_words = 5)  
  
 # Use 'pred_name' to customize the new column's name  
-llm_summarize(reviews, review, 5, pred_name = "review_sentiment")  
+llm_summarize(reviews, review, 5, pred_name = "review_summary")  
  
 # For character vectors, instead of a data frame, use this function  
 llm_vec_summarize( 
@@ -74,7 +74,7 @@ llm_vec_summarize(
   max_words = 5 
   )  
  
-# For character vectors, instead of a data frame, use this function  
+# To preview the first call that will be made to the downstream R function 
 llm_vec_summarize( 
   "This has been the best TV I've ever used. Great screen, and sound.", 
   max_words = 5,  
