--- a/reference/llm_use.qmd
+++ b/reference/llm_use.qmd
@@ -47,5 +47,31 @@ llm_use(
  A `mall_session` object 
 
 
+## Examples
+```{r}
+ 
+library(mall) 
+ 
+llm_use("ollama", "llama3.1") 
+ 
+# Additional arguments will be passed 'as-is' to the  
+# downstream R function in this example, to ollama::chat() 
+llm_use("ollama", "llama3.1", seed = 100, temp = 0.1) 
+ 
+# During the R session, you can change any argument  
+# individually and it will retain all of previous 
+# arguments used 
+llm_use(temp = 0.3) 
+ 
+# Use .cache to modify the target folder for caching 
+llm_use(.cache = "_my_cache") 
+ 
+# Leave .cache empty to turn off this functionality  
+llm_use(.cache = "") 
+ 
+# Use .silent to avoid the print out 
+llm_use(.silent = TRUE) 
+ 
+```
 
 
