Updates all examples with new data set, adds reviews page

--- a/reference/index.qmd
+++ b/reference/index.qmd
@@ -40,3 +40,8 @@ toc: false
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Specify the model to use
 
 
+[reviews](reviews.html)
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mini reviews data set
+
+
