--- a/reference/llm_summarize.qmd
+++ b/reference/llm_summarize.qmd
@@ -54,13 +54,9 @@ llm_vec_summarize(x, max_words = 10, additional_prompt = "", preview = FALSE)
  
 library(mall)  
  
-llm_use("ollama", "llama3.1", seed = 100, .silent = TRUE)  
+data("reviews") 
  
-reviews <- data.frame(review = c(  
-  "This has been the best TV I've ever used. Great screen, and sound.",  
-  "I regret buying this laptop. It is too slow and the keyboard is too noisy",  
-  "Not sure how to feel about my new washing machine. Great color, but hard to figure"  
-))  
+llm_use("ollama", "llama3.1", seed = 100, .silent = TRUE) 
  
 # Use max_words to set the maximum number of words to use for the summary 
 llm_summarize(reviews, review, max_words = 5)  
