--- a/articles/caching.qmd
+++ b/articles/caching.qmd
@@ -26,4 +26,15 @@ named "_mall_cache" . The name of the folder can be easily changed, simply set
 the `.cache` argument in `llm_use()`. To **disable** this functionality, set
 the argument to an empty character, meaning `.cache = ""`.
 
+## How it works
+
+`mall` uses all of the values used to make the LLM query as the "finger print"
+to confidently identify when the same query is being done again. This includes:
+
+- The value in the particular row
+- The additional prompting built by the `llm_` function,
+- Any other arguments/options used, set in `llm_use()`
+- The name of the back end used for the call
+
+
 
