--- a/articles/caching.qmd
+++ b/articles/caching.qmd
@@ -7,6 +7,8 @@ execute:
 
 ```{r}
 #| include: false
+library(fs)
+dir_delete("_mall_cache")
 source("../utils/knitr-print.R")
 ```
 
@@ -36,5 +38,65 @@ to confidently identify when the same query is being done again. This includes:
 - Any other arguments/options used, set in `llm_use()`
 - The name of the back end used for the call
 
+## Examples 
 
+We will initialize the LLM session specifying a seed
 
+```{r}
+library(mall)
+
+llm_use("ollama", "llama3.1", seed = 100)
+```
+Using the `tictoc` package, we will measure how long it takes to make a simple
+sentiment call. 
+
+```{r}
+library(tictoc)
+
+tic()
+llm_vec_sentiment("I am happy")
+toc()
+```
+
+This creates a the "_mall_cache" folder, and inside a sub-folder, it creates a 
+file with the cache. The name of the file is the resulting hash value of the
+combination mentioned in the previous section. 
+
+```{r}
+dir_tree("_mall_cache", recurse = TRUE)
+```
+
+The cache is a JSON file, that contains both the call, and the response
+
+```{r}
+readLines("_mall_cache/08/086214f2638f60496fd0468d7de37c59.json")
+```
+
+Re-running the same `mall` call, will complete significantly faster
+
+```{r}
+tic()
+llm_vec_sentiment("I am happy")
+toc()
+```
+
+If a slightly different query is made, `mall` will recognize that this is a
+different call, and it will send it to the LLM. The results are then saved in a 
+new JSON file. 
+
+```{r}
+llm_vec_sentiment("I am very happy")
+
+dir_tree("_mall_cache", recurse = TRUE)
+```
+
+```{r}
+llm_use(seed = 101)
+```
+```{r}
+llm_vec_sentiment("I am very happy")
+```
+
+```{r}
+dir_tree("_mall_cache", recurse = TRUE)
+```
